Add pic in default page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,9 @@ layout: compress
 
     {% include footer.html %}
 
+    <aside>
+        <img src="../images/default/Clinging-to-a-Scheme-Radio-Dept.gif" alt="Me">
+    </aside>
+
 </body>
 </html>
