--- a/style.scss
+++ b/style.scss
@@ -141,6 +141,12 @@ img {
     width: 100%;
 }
 
+aside {
+    float: right; /* 将元素浮动到右侧 */
+    margin-left: 20px; /* 添加左侧边距，与主内容区隔开 */
+    max-width: 200px; /* 设置图片的最大宽度 */
+}
+
 /**************************************
     $DEFAULT ELEMENTS
 /**************************************/
