--- a/style.scss
+++ b/style.scss
@@ -205,6 +205,13 @@ figcaption {
     width: 50%;
 }
 
+/*right side picture*/
+/*span*/.image_span {
+    float: right;
+    margin-left: 20px;
+    max-width: 200px;
+}
+
 /*span*/.sidenote {
     &:before {
         content: counter(sidenote-counter) " ";
