--- a/style.scss
+++ b/style.scss
@@ -209,7 +209,7 @@ figcaption {
 /*span*/.image_span {
     float: right;
     margin-left: 100px;
-    width: 600px;
+    max-width: 600px;
     margin-top: -200px;
 }
 
