--- a/style.scss
+++ b/style.scss
@@ -207,10 +207,12 @@ figcaption {
 
 /*right side picture*/
 /*span*/.image_span {
+    left: calc(100% + 4rem);
     float: right;
     margin-left: -10px;
-    max-width: 500px;
-    margin-top: -100px;
+    max-width: 400px;
+    position: absolute;
+    top: 0;
 }
 
 /*span*/.sidenote {
