--- a/style.scss
+++ b/style.scss
@@ -207,10 +207,12 @@ figcaption {
 
 /*right side picture*/
 /*span*/.image_span {
-    float: right;
-    margin-left: -10px;
+    left: calc(100% + 4rem);
+    padding-top: 1rem;
     max-width: 400px;
-    margin-top: -100px;
+    position: absolute;
+    top: 0;
+    width: 50%;
 }
 
 /*span*/.sidenote {
