--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,3 +8,12 @@
         <li><a href="/feed.xml">RSS</a></li>
     </ul>
 </nav>
+<nav class="sans">
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <p><label class="menu-icon" for="menu-btn">Menu</label></p>
+    <ul class="site-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/articles">Articles</a></li>
+        <li><a href="/feed.xml">RSS</a></li>
+    </ul>
+</nav>
