--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,7 @@
         <li><a href="/feed.xml">RSS</a></li>
     </ul>
 </nav>
-<nav class="sans">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <p><label class="menu-icon" for="menu-btn">Menu</label></p>
-    <ul class="site-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/articles">Articles</a></li>
-        <li><a href="/feed.xml">RSS</a></li>
-    </ul>
-</nav>
+<a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+<a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
+<a href="https://www.linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+<a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
