--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,39 @@
         <li><a href="/feed.xml">RSS</a></li>
     </ul>
 </nav>
-<a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-<a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
-<a href="https://www.linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-<a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+<div class="row justify-content-center">
+    <!-- Email -->
+    <span onclick="window.open('mailto:3210103251@zju.edu.cn')" style="cursor: pointer">
+      <i class="fa fa-envelope-o" style="font-size:24px;color:grey"></i>
+    </span>
+    <span style="padding-left: 10px"></span>
+    
+    <!-- Twitter -->
+    <!-- <span onclick="window.open('https://twitter.com/')" style="cursor: pointer">
+      <i class="fa fa-twitter" style="font-size:24px;color:grey"></i>
+    </span>
+    <span style="padding-left: 20px"></span> -->
+  
+    <!-- GitHub -->
+    <span onclick="window.open('https://github.com/')" style="cursor: pointer">
+      <i class="fa fa-github" style="font-size:24px;color:grey"></i>
+    </span>
+    <span style="padding-left: 10px"></span>
+  
+    <!-- LinkedIn -->
+    <span onclick="window.open('https://www.linkedin.com/in/')" style="cursor: pointer">
+      <i class="fa fa-linkedin" style="font-size:24px;color:grey"></i>
+    </span>
+    <span style="padding-left: 10px"></span>
+  
+    <span onclick="window.open('https://scholar.google.com/')" style="cursor: pointer">
+      <i class ="fa fa-graduation-cap" style="font-size:24px;color:grey"></i>
+    </span>
+    <span style="padding-left: 10px"></span>
+  
+  
+    <!-- CV -->
+    <span onclick="window.open('./CV.pdf')" style="cursor: pointer">
+      <i class ="fa fa-file-text-o" style="font-size:24px;color:grey"></i>
+    </span>
+</div>
