Adjust pic and title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
         <li><a href="/feed.xml">RSS</a></li>
     </ul>
 </nav>
-<div class="row justify-content-center">
+<nav class="row justify-content-center">
     <!-- Email -->
-    <span onclick="window.open('mailto:3210103251@zju.edu.cn')" style="cursor: pointer">
+    <span onclick="window.open('mailto:zhenghan714@gmail.com')" style="cursor: pointer">
       <i class="fa fa-envelope-o" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
@@ -22,7 +22,7 @@
     <span style="padding-left: 20px"></span> -->
   
     <!-- GitHub -->
-    <span onclick="window.open('https://github.com/')" style="cursor: pointer">
+    <span onclick="window.open('https://github.com/cnzjqz-Hanz')" style="cursor: pointer">
       <i class="fa fa-github" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
@@ -43,4 +43,4 @@
     <span onclick="window.open('./CV.pdf')" style="cursor: pointer">
       <i class ="fa fa-file-text-o" style="font-size:24px;color:grey"></i>
     </span>
-</div>
+</nav>
