Adjust pic and title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,5 @@
 <h2 class="title">{{ site.title }}</h2>
-<nav class="sans">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <p><label class="menu-icon" for="menu-btn">Menu</label></p>
-    <ul class="site-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/articles">Articles</a></li>
-        <li><a href="/feed.xml">RSS</a></li>
-    </ul>
-</nav>
-<nav class="row justify-content-center">
+<div class="row justify-content-center">
     <!-- Email -->
     <span onclick="window.open('mailto:zhenghan714@gmail.com')" style="cursor: pointer">
       <i class="fa fa-envelope-o" style="font-size:24px;color:grey"></i>
@@ -43,4 +34,13 @@
     <span onclick="window.open('./CV.pdf')" style="cursor: pointer">
       <i class ="fa fa-file-text-o" style="font-size:24px;color:grey"></i>
     </span>
+</div>
+<nav class="sans">
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <p><label class="menu-icon" for="menu-btn">Menu</label></p>
+    <ul class="site-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/articles">Articles</a></li>
+        <li><a href="/feed.xml">RSS</a></li>
+    </ul>
 </nav>
