Adjust contact info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <h2 class="title">{{ site.title }}</h2>
-<div class="row justify-content-center" style="margin-top: 20px;">
+<div class="row justify-content-center" style="margin-top: 1rem;">
     <!-- Email -->
     <span onclick="window.open('mailto:zhenghan714@gmail.com')" style="cursor: pointer">
       <i class="fa fa-envelope-o" style="font-size:24px;color:grey"></i>
