Detailed contact icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <h2 class="title">{{ site.title }}</h2>
 <div class="row justify-content-center" style="margin-top: 1rem;">
     <!-- Email -->
-    <span onclick="window.open('mailto:zhenghan714@gmail.com')" style="cursor: pointer">
+    <span onclick="window.open('mailto:zhenghan714@gmail.com')" style="cursor: pointer" title="mailto:zhenghan714@gmail.com">
       <i class="fa fa-envelope-o" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
@@ -13,25 +13,25 @@
     <span style="padding-left: 20px"></span> -->
   
     <!-- GitHub -->
-    <span onclick="window.open('https://github.com/cnzjqz-Hanz')" style="cursor: pointer">
+    <span onclick="window.open('https://github.com/cnzjqz-Hanz')" style="cursor: pointer" title="cnzjqz-Hanz">
       <i class="fa fa-github" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
   
     <!-- LinkedIn -->
-    <span onclick="window.open('https://www.linkedin.com/in/')" style="cursor: pointer">
+    <span onclick="window.open('https://www.linkedin.com/in/')" style="cursor: pointer" title="LinkedIn">
       <i class="fa fa-linkedin" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
   
-    <span onclick="window.open('https://scholar.google.com/')" style="cursor: pointer">
+    <span onclick="window.open('https://scholar.google.com/')" style="cursor: pointer" title="Google Scholoar">
       <i class ="fa fa-graduation-cap" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
   
   
     <!-- CV -->
-    <span onclick="window.open('./CV.pdf')" style="cursor: pointer">
+    <span onclick="window.open('./CV.pdf')" style="cursor: pointer" title="Download CV">
       <i class ="fa fa-file-text-o" style="font-size:24px;color:grey"></i>
     </span>
 </div>
