--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <span style="padding-left: 10px"></span>
   
     <!-- LinkedIn -->
-    <span onclick="window.open('https://www.linkedin.com/in/')" style="cursor: pointer" title="LinkedIn">
+    <span onclick="window.open('https://www.linkedin.com/in/%E6%B6%B5-%E9%83%91-b97985286/')" style="cursor: pointer" title="LinkedIn">
       <i class="fa fa-linkedin" style="font-size:24px;color:grey"></i>
     </span>
     <span style="padding-left: 10px"></span>
