--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
   
   
     <!-- CV -->
-    <span onclick="window.open('./CV.pdf')" style="cursor: pointer" title="Download CV">
+    <span onclick="window.open('../articles/Han_Zheng_CV.pdf')" style="cursor: pointer" title="Download CV">
       <i class ="fa fa-file-text-o" style="font-size:24px;color:grey"></i>
     </span>
 </div>
